--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "flow-bin": "^0.83.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   }
 }
